objects/PWSnapshot__c.object
<CustomObject>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountTypeOther__c</fullName>
        <label>Account Type Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountType__c</fullName>
        <label>Account Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgeHours__c</fullName>
        <label>Age (Hours)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AllocationRisk__c</fullName>
        <label>Allocation Risk</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthorizationReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorization Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseDateTimeLastModified__c</fullName>
        <label>Case Date/Time Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CaseLastModifiedBy__c</fullName>
        <label>Case Last Modified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <label>Case Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOwner__c</fullName>
        <label>CaseOwner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <label>Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustodialAccountNumber__c</fullName>
        <label>Custodial Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustodianName__c</fullName>
        <label>Custodian Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateTimeOpened__c</fullName>
        <label>Date/Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DiscretionaryNondiscretionary__c</fullName>
        <label>Discretionary/Non-discretionary</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentVoided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document Voided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirmOfficeName__c</fullName>
        <label>Firm Office Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirmSFID__c</fullName>
        <label>Firm SFID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastCommentDatetime__c</fullName>
        <label>Last Comment Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastCommentText__c</fullName>
        <label>Last Comment Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiquidationType__c</fullName>
        <label>Liquidation Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelGUID__c</fullName>
        <label>Model GUID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelName__c</fullName>
        <label>Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofWithdrawals__c</fullName>
        <label>Number of Withdrawals</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PWParentCase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PW Parent Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PWPortalStatus__c</fullName>
        <label>PW Portal Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PWReqorPortalID__c</fullName>
        <label>Requestor Portal ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentCaseNumber__c</fullName>
        <label>Parent Case Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentCasePortalID__c</fullName>
        <label>Parent Case Portal ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentStatus__c</fullName>
        <label>Parent Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrivateWealthCaseID__c</fullName>
        <label>Private Wealth Case ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrivateWealthFirmOfficeID__c</fullName>
        <label>Private Wealth Firm Office ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrivateWealthRequestDate__c</fullName>
        <label>Private Wealth Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RebalancingMethodology__c</fullName>
        <label>Rebalancing Methodology</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RestrictionType__c</fullName>
        <label>Restriction Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuitabilityRisk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suitability Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaxHarvestingLevel__c</fullName>
        <label>Tax Harvesting Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxHarvestingThresholdAmount__c</fullName>
        <label>Tax Harvesting Threshold Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxHarvestingThresholdPercent__c</fullName>
        <label>Tax Harvesting Threshold Percent</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TaxHarvestingType__c</fullName>
        <label>Tax Harvesting Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerminationType__c</fullName>
        <label>Termination Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WithdrawalAmount__c</fullName>
        <label>Withdrawal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WithdrawalDate__c</fullName>
        <label>Withdrawal Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WithdrawalEndDate__c</fullName>
        <label>Withdrawal End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WithdrawalFrequency__c</fullName>
        <label>Withdrawal Frequency</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WithdrawalStartDate__c</fullName>
        <label>Withdrawal Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WithdrawalType__c</fullName>
        <label>Withdrawal Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <description>Used by Snapshot report</description>
    <label>PW Snapshot</label>
    <nameField>
        <label>PW Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PW Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>